--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <div>
         <h2>Our Team</h2>
         <img
           src="./images/christopher_walker.jpg"
@@ -131,19 +131,21 @@
         <span><b>Tyler Moore</b></span>
         <br />
         <span>UI Designer</span>
-      </section>
+      </div>
     </main>
     <footer>
-      <a href="index.html">
-        <h2>WebStudio</h2>
-      </a>
-      <address>
-        695 Park Ave, NY 10065, USA
-        <br />
-        info@devstudio.com
-        <br />
-        +1 212-772-4150
-      </address>
+      <div>
+        <a href="index.html">
+          <h2>WebStudio</h2>
+        </a>
+        <address>
+          695 Park Ave, NY 10065, USA
+          <br />
+          info@devstudio.com
+          <br />
+          +1 212-772-4150
+        </address>
+      </div>
     </footer>
   </body>
 </html>
