Changes after feedback 2
feedback 2

--- a/index.html
+++ b/index.html
@@ -86,52 +86,57 @@
           </li>
         </ul>
       </section>
-      <div>
+      <section>
         <h2>Our Team</h2>
-        <img
-          src="./images/christopher_walker.jpg"
-          alt="Christopher Walker"
-          width="270"
-          height="260"
-        />
-        <br />
-        <span><b>Christopher Walker</b></span>
-        <br />
-        <span>Product designer</span>
-        <br />
-        <img
-          src="images/kilie_evans.jpg"
-          alt="Kylie Evans"
-          width="270"
-          height="260"
-        />
-        <br />
-        <span><b>Kylie Evans</b></span>
-        <br />
-        <span>Frontend Developer</span>
-        <br />
-        <img
-          src="images/ryan_harris.jpg"
-          alt="Ryan Harris"
-          width="270"
-          height="260"
-        />
-        <br />
-        <span><b>Ryan Harris</b></span>
-        <br />
-        <span>Marketing</span>
-        <br />
-        <img
-          src="images/tyler_moore.jpg"
-          alt="Tyler Moore"
-          width="270"
-          height="260"
-        />
-        <br />
-        <span><b>Tyler Moore</b></span>
-        <br />
-        <span>UI Designer</span>
-      </div>
+        <div>
+          <img
+            src="./images/christopher_walker.jpg"
+            alt="Christopher Walker"
+            width="270"
+            height="260"
+          />
+          <br />
+          <span><b>Christopher Walker</b></span>
+          <br />
+          <span>Product designer</span>
+        </div>
+        <div>
+          <img
+            src="images/kilie_evans.jpg"
+            alt="Kylie Evans"
+            width="270"
+            height="260"
+          />
+          <br />
+          <span><b>Kylie Evans</b></span>
+          <br />
+          <span>Frontend Developer</span>
+        </div>
+        <div>
+          <img
+            src="images/ryan_harris.jpg"
+            alt="Ryan Harris"
+            width="270"
+            height="260"
+          />
+          <br />
+          <span><b>Ryan Harris</b></span>
+          <br />
+          <span>Marketing</span>
+        </div>
+        <div>
+          <img
+            src="images/tyler_moore.jpg"
+            alt="Tyler Moore"
+            width="270"
+            height="260"
+          />
+          <br />
+          <span><b>Tyler Moore</b></span>
+          <br />
+          <span>UI Designer</span>
+        </div>
+      </section>
     </main>
     <footer>
       <div>
